Refactor wallet panel search.

--- a/assets/css/WalletDashboard.scss
+++ b/assets/css/WalletDashboard.scss
@@ -43,3 +43,8 @@ table.dividend-two-year {
   }
 }
 
+div.js-position-dividend-panel-box {
+  .js-table-header-search-container {
+    width: 50% !important;
+  }
+}
