--- a/templates/wallets/partial/position-box.html.twig
+++ b/templates/wallets/partial/position-box.html.twig
@@ -18,6 +18,7 @@
                     'js_panel_class': 'js-position-panel-box',
                     'border': 0,
                     'buttons': wallet_position_buttons,
+                    'search_width': wallet_position_search_width,
                 }%}
                 {% endembed %}
             </div>
