--- a/templates/wallets/partial/dividend-box.html.twig
+++ b/templates/wallets/partial/dividend-box.html.twig
@@ -16,7 +16,8 @@
                     'entity_name': wallet_position_dividend_entity_name,
                     'fields': wallet_position_dividend_fields,
                     'js_panel_class': 'js-position-dividend-panel-box',
-                    'border': 0
+                    'border': 0,
+                    'search_width': wallet_position_dividend_search_width,
                 }%}
                 {% endembed %}
             </div>
