--- a/templates/wallets/dashboard.html.twig
+++ b/templates/wallets/dashboard.html.twig
@@ -183,7 +183,7 @@
                 positionPanelTable.addRowButton(positionDividendRowButton);
             });
 
-            let panel = new WalletDashboardPanel(
+            let panel = new WalletDashboard(
                 {{ wallet.id }},
                 positionPanelTable,
                 dividendPanelTable,
