Move table template to its own folder.
- Moved table template to its own folder.
- Updated WalletDashboard.

--- a/templates/wallets/partial/dividend-box.html.twig
+++ b/templates/wallets/partial/dividend-box.html.twig
@@ -100,7 +100,7 @@
                     </div>
                     <!-- /.box-header -->
                     <div class="box-body">
-                        {% embed 'Components/ui/table.html.twig' with {
+                        {% embed 'Components/Table/table.html.twig' with {
                             'entity_name': wallet_coming_dividend_entity_name,
                             'fields': wallet_coming_dividend_fields,
                             'js_table_class': 'js-coming-dividend-table-row-box',
