--- a/templates/Components/Table/table.html.twig
+++ b/templates/Components/Table/table.html.twig
@@ -17,28 +17,16 @@
                 'label': <value>, -> Column name label. When label is not defined then name is used instead.
                 'col_with': <value> -> Collumn with
             }
-     js_crud_manage_class = default('js-crud-manage-row-box')
+     js_table_class = default('js-table-box')
 #}
 
+{% import 'Components/Macros/table-render.html.twig' as render %}
 
-<div class="row {{ js_crud_manage_class|default('js-crud-manage-row-box') }}" data-entity-type="{{ entity_name|snake }}">
+<div class="row {{ js_table_class|default('js-table-box') }}" data-entity-type="{{ entity_name|snake }}">
     <div class="col-md-12">
         <div class="box {% if border is defined and border == 0 %}no-border{% endif %}">
-            <div class="box-header with-border js-manage-header">
-                <div class="col-md-12 js-manage-header-create-button-container">
-                    <!-- create button table manager template -->
-                </div>
-                <div class="col-md-12" style="margin-top: 20px;">
-                    <div class="col-md-4 js-manage-header-per-page-container" style="padding-left: 0px;">
-
-                    </div>
-                    <div class="col-md-4 pull-right js-manage-header-search-container" style="padding-right: 0px;">
-                        <!-- create search table manager template -->
-                    </div>
-                </div>
-            </div>
             <div class="box-body table-responsive no-padding">
-                <table id="{{ entity_name|lower|replace({' ': '_'}) }}s" class="table table-bordered table-striped js-manager-table">
+                <table id="{{ entity_name|lower|replace({' ': '_'}) }}s" class="table table-bordered table-striped js-table">
                     <thead>
                     <tr>
                         <th width="60" class="text-center" scope="col">#</th>
@@ -48,7 +36,6 @@
                                 {% if field.label is not defined %}{{ field.name|trans|upper }}{% else %}{{ field.label|trans|upper }}{% endif %}
                             </th>
                         {% endfor %}
-                        <th class="js-manage-buttons" scope="col"></th>
                     </tr>
                     </thead>
                     <tbody>
@@ -61,22 +48,24 @@
                                 {% if field.label is not defined %}{{ field.name|trans|upper }}{% else %}{{ field.label|trans|upper }}{% endif %}
                             </th>
                         {% endfor %}
-                        <th scope="col"></th>
                     </tr>
                     </tfoot>
                 </table>
             </div>
-            <div class="box-footer with-border js-manage-footer">
-                <div class="col-md-12">
-                    <div class="pull-left col-sm-6">
-                        <span class="js-manage-pagination-info" id="{{ entity_name|lower|replace({' ': '_'}) }}s-pagination-info" role="status" aria-live="polite"
-                           data-text="{{ 'Showing :from to :to of :of'|trans }} {{ entity_name|lower|replace({'_': ' '}) }}s"></span>
-                    </div>
-                    <div class="pull-right col-sm-6">
-                        <ul id="{{ entity_name|lower|replace({' ': '_'}) }}s-pagination" class="pagination-sm pagination js-manage-pagination pull-right"></ul>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </div>
+
+{% if fields is defined %}
+    <!-- row table manager template -->
+    <script type="text/template" id="js-table-{{ entity_name|lower|replace({' ': '_'}) }}-row-template">
+        <tr data-id="<%= id %>" data-i="<%= index %>">
+            <th style="vertical-align: middle;" scope="row" class="text-center js-table-row-index"><%= index %></th>
+            {% for field in fields %}
+                <td style="vertical-align: middle;" {% if field.class is defined %} class="{{ field.class }}" {% endif %}>
+                    {{ render.field(field.name, field) }}
+                </td>
+            {% endfor %}
+        </tr>
+    </script>
+{% endif %}
