Fixed confirmation text.

--- a/templates/Components/Panel/panel-table.html.twig
+++ b/templates/Components/Panel/panel-table.html.twig
@@ -233,15 +233,15 @@
             create: {
                 confirmButtonText: '{{ 'Create'|trans }}',
                 titleText: '{{ 'Create new'|trans }} {{ entity_name|trans|title }}',
-                toastTitleText: '{{ entity_name|trans|title }} {{ 'was created successfully.'|trans }}'
+                confirmTitleText: '{{ entity_name|trans|title }} {{ 'was created successfully.'|trans }}'
             },
             update: {
                 confirmButtonText: '{{ 'Update'|trans }}',
                 titleText: '{{ 'Update'|trans }} {{ entity_name|trans|title }}',
-                toastTitleText: '{{ entity_name|trans|title }} {{ 'was updated successfully.'|trans }}'
+                confirmTitleText: '{{ entity_name|trans|title }} {{ 'was updated successfully.'|trans }}'
             },
             delete: {
-                toastTitleText: '{{ entity_name|trans|title }} {{ 'was deleted successfully.'|trans }}'
+                confirmTitleText: '{{ entity_name|trans|title }} {{ 'was deleted successfully.'|trans }}'
             }
         };
 
