--- a/templates/wallets/partial/position-box.html.twig
+++ b/templates/wallets/partial/position-box.html.twig
@@ -19,6 +19,8 @@
                     'border': 0,
                     'buttons': wallet_position_buttons,
                     'search_width': wallet_position_search_width,
+                    'header': 0,
+                    'footer': 0,
                 }%}
                 {% endembed %}
             </div>
