--- a/templates/wallets/partial/dividend-box.html.twig
+++ b/templates/wallets/partial/dividend-box.html.twig
@@ -91,7 +91,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <div class="box">
+                <div class="box js-coming-dividends-panel">
                     <div class="box-header with-border">
                         <h3 class="box-title">{{ 'Coming Dividends'|trans }}</h3>
 
@@ -106,7 +106,7 @@
                         {% embed 'Components/Panel/panel-table.html.twig' with {
                             'entity_name': wallet_coming_dividend_entity_name,
                             'fields': wallet_coming_dividend_fields,
-                            'js_table_class': 'js-coming-dividend-table-row-box',
+                            'js_panel_class': 'js-coming-dividends-panel-box',
                             'border': 0,
                             'panel_header': 0,
                             'header': 0,
