--- a/templates/wallets/partial/dividend-box.html.twig
+++ b/templates/wallets/partial/dividend-box.html.twig
@@ -40,6 +40,9 @@
                     'panel_header': 0,
                     'header': 0,
                     'footer': 0,
+                    'buttons': wallet_position_dividend_buttons,
+                    'form': wallet_position_dividend_form,
+                    'swalOptionsVariablePrefix': 'PositionDividend'
                 }%}
                 {% endembed %}
             </div>
