--- a/templates/wallets/partial/operation-box.html.twig
+++ b/templates/wallets/partial/operation-box.html.twig
@@ -19,7 +19,7 @@
                     'border': 0,
                     'form': wallet_operation_form,
                     'search_width': wallet_operation_search_width,
-                    'swalOptionsName': 'swalOperationOptions'
+                    'swalOptionsVariablePrefix': 'Operation'
                 }%}
                 {% endembed %}
             </div>
